# your-first-light-api

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  update-data.yml
data/: eclipses.json  manifest.json
src/: __init__.py  app.py  compute.py  constants.py  models.py
tests/: __init__.py  conftest.py  test_categories.py  test_compute.py  test_e2e.py  test_endpoints.py  test_errors_cors.py  test_parsers.py  test_rate_limiting.py  test_updaters.py
tools/: update_data.py
tools/updaters/: update_eclipses.py  update_stars.py
