[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-first-light"
version = "1.0.0"
description = "Post your birthday. Discover your cosmic reach."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3,<0.136.0",
    "uvicorn>=0.44.0,<0.45.0",
    "astropy>=7.2.0,<7.3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]
catalogue = [
    "astroquery>=0.4.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::erfa.ErfaWarning",
]

[tool.ruff]
target-version = "py313"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tools/updaters/update_stars.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
